--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ path = "src/main.rs"
 name = "falcon_key_file"
 path = "src/lib/falcon-key-file/src/lib.rs"
 
+
 [dependencies]
-bms-sm = "=0.1.1"
+bms-sm = { version = "*", path = "src/lib/bms-rs" }
 tokio = { version = "1", features = ["full"] }
 log = "0.4.22"
 env_logger = "0.11.5"
