--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ bms-sm = { version = "*", path = "src/lib/bms-rs" }
 tokio = { version = "1", features = ["full"] }
 log = "0.4.22"
 env_logger = "0.11.5"
-
+winapi = "*"
+user32-sys = "*"
