--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,9 @@ log = "0.4.22"
 env_logger = "0.11.5"
 winapi = "*"
 user32-sys = "*"
+enigo = "0.2.1"
+
+[profile.release]
+strip = true  # Automatically strip symbols from the binary.
+opt-level = "z"  # Optimize for size.
+lto = true
