--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ env_logger = "0.11.5"
 winapi = "*"
 user32-sys = "*"
 enigo = "0.2.1"
+seahash = "4.1.0"
 
 [profile.release]
 strip = true  # Automatically strip symbols from the binary.
