Also checkout submodules

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.ref }}
+        submodules: recursive
     - name: Build
       run: cargo build --verbose
     - name: Run tests
