--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,3 +23,16 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+
+  package:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.ref }}
+        submodules: recursive
+    - name: Build for x64
+      run: cargo build --verbose --release --target=x86_64-pc-windows-gnu
+    - name: Build for i686
+      run: cargo build --verbose --release --target=stable-i686-pc-windows-gnu
