--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,6 +33,6 @@ jobs:
         ref: ${{ github.ref }}
         submodules: recursive
     - name: Build for x64
-      run: cargo build --verbose --release --target=x86_64-pc-windows-gnu
+      run: cargo build --release --target=x86_64-pc-windows-gnu
     - name: Build for i686
-      run: cargo build --verbose --release --target=stable-i686-pc-windows-gnu
+      run: rustup target add i686-pc-windows-msvc && cargo build --release --target=i686-pc-windows-msvc
