--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Run cargo build and test
+name: Run tests and build a package
 
 on:
   push:
@@ -10,8 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  test:
     runs-on: windows-latest
 
     steps:
@@ -19,12 +18,10 @@ jobs:
       with:
         ref: ${{ github.ref }}
         submodules: recursive
-    - name: Build
-      run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
 
-  package:
+  build_release_and_package:
     runs-on: windows-latest
 
     steps:
