--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,3 +46,17 @@ jobs:
         Copy-Item ".\target\i686-pc-windows-msvc\release\falcon_bms_callbacker.exe" -Destination ".\target\package\win32\"
 
         tree target\package /F
+
+        Compress-Archive -Path ".\target\package\win64\*" -DestinationPath ".\target\package\falcon_bms_callbacker-win64.zip"
+        Compress-Archive -Path ".\target\package\win32\*" -DestinationPath ".\target\package\falcon_bms_callbacker-win32.zip"
+
+    - name: Upload win64 binary
+      uses: actions/upload-artifact@v4
+      with:
+        name: falcon_bms_callbacker-win64.zip
+        path: ./target/package/falcon_bms_callbacker-win64.zip
+    - name: Upload win32 binary
+      uses: actions/upload-artifact@v4
+      with:
+        name: falcon_bms_callbacker-win32.zip
+        path: ./target/package/falcon_bms_callbacker-win32.zip
