Make github action fetch tags and history

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,6 +27,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
+        fetch-depth: 0
         ref: ${{ github.ref }}
         submodules: recursive
     - name: Build for x64
